# poetry-with-private-repos

./: .dockerignore  .gitignore  Dockerfile  README.md  auth-example.toml  pyproject.toml
